<resources>
    <string name="app_name">AndroidOtpVerification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp_to_this_mobile_number">We will send you an OTP to this Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get Otp</string>
    <string name="enter_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_otp">didn\'t receive OTP ?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
</resources>
