<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/received" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_otp_sent_to"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />
            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />
            <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="labelFor" />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/didn_t_receive_otp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:includeFontPadding="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>


        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:layout_margin="30dp"
                android:text="@string/verify"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
            <ProgressBar
                android:id="@+id/progressBarVerify"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_gravity="center"/>
        </FrameLayout>



    </LinearLayout>

</ScrollView>